Updated the fact that all Hunters get +2 RAT

--- a/Sloan.ipynb
+++ b/Sloan.ipynb
@@ -2,9 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -37,9 +37,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -47,51 +47,62 @@
     "    POW = 6;\n",
     "    RAT = 7;\n",
     "    armor = np.ceil(armor/2)\n",
-    "    hitting = roll_at_least( defense-RAT, 3 );\n",
+    "    hitting = roll_at_least( defense-(RAT+2), 3 );\n",
     "    \n",
-    "    roll, prob = expected_roll( 2 );\n",
-    "    dice = -( armor - ( POW + roll ));\n",
+    "    dice, prob = expected_roll( 2 );\n",
+    "    dice = -( armor - ( POW + dice ));\n",
     "\n",
     "    D = {};\n",
-    "    for i in range(dice.shape[0]):\n",
-    "        D[dice[i]] = hitting*prob[i];\n",
+    "    for roll in range(dice.shape[0]):\n",
+    "        D[dice[roll]] = hitting * prob[roll];\n",
     "\n",
-    "    C = { 0: 1 };\n",
-    "    for r in np.arange(0,hunters):\n",
+    "    cumulative = { 0: 1 };\n",
+    "    \n",
+    "    for attacks in np.arange(0,hunters):\n",
     "        tmp = {}\n",
-    "        for dmg_1 in C.keys():\n",
-    "            for dmg_2 in D.keys():\n",
-    "                if r < focus:\n",
-    "                    tmp[ dmg_1+dmg_2-5 ] = tmp.get( dmg_1+dmg_2-5, 0.0 ) +  C[dmg_1] * D[dmg_2]\n",
-    "                else:\n",
-    "                    tmp[ dmg_1+dmg_2 ] = tmp.get( dmg_1+dmg_2, 0.0 ) +  C[dmg_1] * D[dmg_2]\n",
-    "        C = tmp;\n",
+    "        for d1 in cumulative.keys():\n",
+    "            for d2 in D.keys():\n",
+    "                d = d1 + d2;\n",
+    "                if attacks < focus:\n",
+    "                    d -= 5;\n",
+    "                tmp[ d ] = tmp.get( d, 0.0 ) +  cumulative[d1] * D[d2]\n",
+    "        cumulative = tmp;\n",
     "\n",
     "    odds = 0;\n",
-    "    for damage in C.keys():\n",
+    "    for damage in cumulative.keys():\n",
     "        if damage >= boxes:\n",
-    "            odds += C[damage];\n",
+    "            odds += cumulative[damage];\n",
     "            \n",
     "    print 'The odds of %s surviving are %.2f%%, so he/she is dead in %.2f%%' % (name, (1-odds) * 100, odds * 100 )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The odds of Kozlov surviving are 91.47%, so he/she is dead in 8.53%\n",
+      "The odds of Karchev surviving are 100.00%, so he/she is dead in 0.00%\n",
+      "The odds of Deneghra 1 surviving are 95.41%, so he/she is dead in 4.59%\n"
+     ]
+    }
+   ],
    "source": [
     "survive_options ( 'Kozlov', defense=15, armor=17, boxes=17, focus=6)\n",
     "survive_options ( 'Karchev', defense=12, armor=19, boxes=34, focus=6)\n",
-    "survive_options ( 'Deneghra 1', defense=16, armor=14, boxes=16, focus=7)\n"
+    "survive_options ( 'Deneghra 1', defense=16, armor=14, boxes=16, focus=7)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 2 (SageMath)",
    "language": "python",
    "name": "python2"
   },
