--- a/Sloan.ipynb
+++ b/Sloan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -87,9 +87,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The odds of Kozlov surviving are 91.47%, so he/she is dead in 8.53%\n",
+      "The odds of Kozlov surviving are 72.67%, so he/she is dead in 27.33%\n",
       "The odds of Karchev surviving are 100.00%, so he/she is dead in 0.00%\n",
-      "The odds of Deneghra 1 surviving are 95.41%, so he/she is dead in 4.59%\n"
+      "The odds of Deneghra 1 surviving are 71.46%, so he/she is dead in 28.54%\n"
      ]
     }
    ],
@@ -102,7 +102,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2 (SageMath)",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
   },
